Prevent mobile nav overlapping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -103,7 +103,7 @@ nav {
   justify-content: space-between;
   position: fixed;
   width: 100%;
-  height: 55px;
+  height: 65px;
   bottom: 0;
   border-top: 1px var(--white-alt) solid;
   align-items: center;
@@ -123,8 +123,8 @@ nav.open ul {
   padding: 0;
   margin: 0;
   height: 100%;
-  max-width: 700px;
   width: 96%;
+  text-align: center;
 }
 
 nav.open ul li {
@@ -141,7 +141,7 @@ nav.open ul li {
 .close-button {
   position: absolute;
   right: 2%;
-  font-size: calc(18 / 16 * 1rem);
+  font-size: calc(18 / 17 * 1rem);
 }
 
 .close-button {
@@ -160,6 +160,13 @@ nav.open ul li {
   white-space: nowrap;
   padding: 0;
   margin: 0 4.5rem;
+}
+
+.playlist-button-text {
+  display: block;
+  text-overflow: ellipsis;
+  max-width: 175px;
+  overflow: hidden;
 }
 
 button {
